--- a/final/sample.css
+++ b/final/sample.css
@@ -1,69 +1,38 @@
-.dynamic-fare:not(input):not(.vis) {
+.dynamic-fare {
     font-size: 0;
 }
 
 .trip-day:focus-within,
 .trip-eve:focus-within,
-.trip-mix:focus-within {
-    font-size: initial;
-}
-
+.trip-mix:focus-within,
 .trip-fare:focus-within {
     font-size: initial;
 }
 
-.trip-day:focus-within .vis,
-.trip-eve:focus-within .vis,
-.trip-mix:focus-within .vis,
-.trip-fare:focus-within .vis {
-    background-color: grey;
-}
-
-.zone4:focus-within,
-.zone3:focus-within,
-.zone2:focus-within,
-.zone1:focus-within {
-    font-size: initial;
-}
-
-.dynamic-fare input.zone-btn {
-    background: rgb(60, 105, 160);
-    color: white;
-}
-
-.dynamic-fare input.zone-btn:focus,
-.dynamic-fare input.zone-btn:hover {
-    background: rgb(161, 196, 240);
-    color: white;
-}
-
 .dynamic-fare input:not(.zone-btn) {
-    background: white;
     height: 0;
-    /* color: white; */
-    font-size: 0;
 }
 
 .dynamic-fare:focus-within input:not(.zone-btn) {
-    background: rgb(60, 105, 160);
     height: initial;
-    /* color: white; */
-    font-size: initial;
 }
 
-.dynamic-fare input:not(.zone-btn):focus,
-.dynamic-fare input:not(.zone-btn):hover {
+.dynamic-fare input.fare-btn,
+.dynamic-fare input.zone-btn {
+    background: rgb(60, 105, 160);
+}
+
+.dynamic-fare input.fare-btn:focus,
+.dynamic-fare input.fare-btn:hover,
+.dynamic-fare input.zone-btn:focus,
+.dynamic-fare input.zone-btn:hover {
     background: rgb(161, 196, 240);
-    color: white;
-}
-
-.dynamic-fare input:not(.vis) {
-    font-size: 0;
 }
 
 .fare-btn {
     position: absolute;
     left: 100px;
+    width: 60px;
 }
 
 .zone-btn {
@@ -91,14 +60,12 @@
     top: 265px;
 }
 
-.ticket {
-    font-size: initial;
-    width: 200px;
-    position: absolute;
-    left: 250px;
-}
-
 .trip-txt {
     position: absolute;
     left: 400px;
+}
+
+.ticket {
+    font-size: initial;
+    width: 200px;
 }
